feat: last sprint

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -538,3 +538,65 @@ Publisher: Molecular Diversity Preservation International},
 	urldate = {2023-09-19},
 	date = {2007},
 }
+
+@article{gritzner_recommendations_1982,
+	title = {Recommendations on reporting electrode potentials in nonaqueous solvents (Provisional)},
+	volume = {54},
+	issn = {1365-3075, 0033-4545},
+	url = {https://www.degruyter.com/document/doi/10.1351/pac198254081527/html},
+	doi = {10.1351/pac198254081527},
+	abstract = {Abstract},
+	pages = {1527--1532},
+	number = {8},
+	journaltitle = {Pure and Applied Chemistry},
+	author = {Gritzner, G. and Kuta, J.},
+	urldate = {2023-09-25},
+	date = {1982-01-01},
+	langid = {english},
+	file = {Gritzner_Kuta_1982_Recommendations on reporting electrode potentials in nonaqueous solvents.pdf:/home/stefanom/GoogleDrive/University/Zotero/Zotero/storage/WHKJDID3/Gritzner_Kuta_1982_Recommendations on reporting electrode potentials in nonaqueous solvents.pdf:application/pdf},
+}
+
+@book{bard_electrochemical_2001,
+	location = {New York},
+	edition = {2nd ed},
+	title = {Electrochemical methods: fundamentals and applications},
+	isbn = {978-0-471-04372-0},
+	shorttitle = {Electrochemical methods},
+	pagetotal = {833},
+	publisher = {Wiley},
+	author = {Bard, Allen J. and Faulkner, Larry R.},
+	date = {2001},
+	keywords = {Electrochemistry},
+}
+
+@article{hansch_survey_1991,
+	title = {A survey of Hammett substituent constants and resonance and field parameters},
+	volume = {91},
+	issn = {0009-2665, 1520-6890},
+	url = {https://pubs.acs.org/doi/abs/10.1021/cr00002a004},
+	doi = {10.1021/cr00002a004},
+	pages = {165--195},
+	number = {2},
+	journaltitle = {Chemical Reviews},
+	shortjournal = {Chem. Rev.},
+	author = {Hansch, Corwin. and Leo, A. and Taft, R. W.},
+	urldate = {2023-09-25},
+	date = {1991-03-01},
+	langid = {english},
+}
+
+@thesis{marco_visconti_new_2021,
+	title = {New metal-Organic Polymeric Materials: from design to synthesis, structural characterization and properties},
+	institution = {Universitá degli Studi di Milano},
+	type = {phdthesis},
+	author = {Marco Visconti},
+	date = {2021},
+}
+
+@thesis{simone_galeazzi_nuovi_2021,
+	title = {Nuovi leganti contenenti donatori all'N e all'O per la costruzione di nuovi Metal-Organic Frameworks},
+	institution = {Universitá degli Studi di Milano},
+	type = {Master Thesis},
+	author = {Simone Galeazzi},
+	date = {2021},
+}
