--- a/Master.tex
+++ b/Master.tex
@@ -5,7 +5,6 @@
 \title{Bachelor Thesis}
 \author{Stefano Marton}
 \date{2022/2023}
-
 \makeatletter
 \def\cleardoublepage{\clearpage%
 	\if@twoside
@@ -69,17 +68,19 @@
 \begin{flushleft}
 	\topskip0pt
 	\it
-	I would like to express my heartfelt gratitude to the following individuals whose unwavering support and encouragement made this journey possible:
-
 	First and foremost, I want to extend my deepest appreciation to my loving parents. Your endless support, belief in me, and sacrifices have been the driving force behind my pursuits. Without you, this achievement would not have been possible.
 
 	To my dear friends, your encouragement and understanding during this challenging period have been a source of strength. Your support meant the world to me, and I am truly grateful for the camaraderie we share.
 
-	I extend my sincere thanks to professor Carlucci for your guidance, mentorship, and valuable insights throughout my research. Delia, I appreciate your assistance and guidance as well. To all my fellow group members, your collaboration and the incredible lab environment we had were instrumental in my success.
-
 	Special thanks go to my friend Stefano, who not only provided invaluable input and inspiration for my work but also made sure we had quality downtime together. Your friendship has been a cherished aspect of this journey.
 
-	To everyone who played a part in my academic and personal growth, I am deeply thankful. This work would not have been possible without your support and encouragement.
+	I would like to express my gratitude to Giulia, who provided me with immense support and patience. Thank you for guiding me on an easier path to follow.
+
+	I extend my sincere thanks to professor Carlucci for your guidance, mentorship, and valuable insights throughout my research. Delia, I appreciate your assistance and guidance as well. To all my fellow group members, your collaboration and the incredible lab environment we had were instrumental in my success.
+
+	Also, I feel I should thank and remember my high school teacher Cristina's inspiration to look a little further than the garden outside the house.
+
+	I am deeply grateful to everyone who has contributed to my academic and personal growth. This work would not have been possible without your support and encouragement, you are all in my heart.
 	\vspace*{\fill}
 
 \end{flushleft}
@@ -96,6 +97,9 @@
 	\acro{PyrDiAc}{\iupac{\small Dimethyl 4,4'-malonyldibenzoate}}
 	\acro{UnsDiEst}{\iupac{\small Methyl 4-[(1E)-3-[4-(methoxycarbonyl)phenyl]-3-oxoprop-1-en-1-yl]benzoate}}
 	\acro{DikDiCN}{\iupac{\small Dimethyl 4,4'-malonyldibenzoate}}
+	\acro{DikCN}{\iupac{\small 4‐[(2Z)‐3‐hydroxy‐3‐phenylprop‐2‐enoyl]benzonitrile}}
+	\acro{DikBiCN}{\iupac{\small 4'‐[(2Z)‐3‐{4'‐cyano‐[1,1'‐biphenyl]‐4‐yl}‐3‐hydroxyprop‐2‐enoyl]‐[1,1'‐biphenyl]‐4‐carbonitrile}}
+	\acro{PyrBiCN}{\iupac{\small 4'‐(5‐{4'‐cyano‐[1,1'‐biphenyl]‐4‐yl}‐1H‐pyrazol‐3‐yl)‐[1,1'‐biphenyl]‐4‐carbonitrile}}
 	\acro{Fe III metalloligand}{\small \iupac{Tris[1,3-bis(4’-cyanophenyl)-1,3-propanedionato]iron(III)}}
 	\acro{Co III metalloligand}{\small \iupac{Tris[1,3-bis(4’-cyanophenyl)-1,3-propanedionato]cobalt(III)}}
 	\acro{Zn II metalloligand}{\small \iupac{Tetraethylammonium tris[1,3-bis(4’-cyanophenyl)-1,3propanedionato]cobaltate(II)}}
@@ -108,8 +112,8 @@
 
 \tableofcontents
 
-\afterpage{\blankpage}
-\newpage
+% \afterpage{\blankpage}
+% \newpage
 % \listoffigures
 
 \addcontentsline{toc}{chapter}{Summary}
@@ -141,6 +145,9 @@ During the time spent working on these wide range topics the need of small and r
 
 % Fourth chapter
 \subfile{Chapters/ToolDevelopment.tex}
+
+\afterpage{\blankpage}
+\cleardoublepage
 
 \printbibliography[heading=bibintoc]
 
